# Powerload-Classification-and-Prediction-System

./: LICENSE  README.md  README_SC.md  README_VN.md
CPP_backend/: CMakeLists.txt  README.md  main.cpp  test.cpp
CPP_backend/src/buffer/: buffer.cpp  buffer.h
CPP_backend/src/database/: database.cpp  database.h
CPP_backend/src/http/: httpconnect.cpp  httpconnect.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h
CPP_backend/src/log/: blockqueue.h  log.cpp  log.h
CPP_backend/src/pool/: threadpool.cpp  threadpool.h
CPP_backend/src/server/: epoller.cpp  epoller.h  webserver.cpp  webserver.h
CPP_backend/src/timer/: timer.h
Python_backend/: README.md  app-ai-mq.py  app-ai.py  app-backend-mq.py  app-backend.py  app.py  powerload.db
Python_backend/classify/: Classification-Model-v6.3-2.2.keras  Classification_Test_v6.3.py  Classification_Train_v6.3.py  label2index_dict.pkl  pca.pkl
Python_backend/compare/: arima.py  c.csv
Python_backend/dataset/: usb风扇+电吹风.csv  电磁炉+电吹风.csv  白炽灯+电吹风.csv
Python_backend/prediction/: model-large.pt  prediction.py
WeChat_client/: README.md  app.js  app.json  project.config.json  project.private.config.json
WeChat_client/custom-tab-bar/: index.js  index.wxml  index.wxss
WeChat_client/ec-canvas/: ec-canvas.js  ec-canvas.wxml  echarts.min.js  wx-canvas.js
WeChat_client/pages/dist-detail/: dist-detail.js  dist-detail.json  dist-detail.wxml  dist-detail.wxss
WeChat_client/pages/login/: login.js  login.json  login.wxml  (+2 more)
docs/: subtitle.srt
docs/video/: subtitle.srt  subtitle_en.srt  subtitle_vn.srt
(+7 files in other folders)
